outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval-8250679821276556163_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of reducing the estimated distance to the destination, while the direct distance ensures practical feasibility. The code processes each unvisited node, computes the weighted sum, and selects the node with the smallest value.}
                                                                                                                                                                                                                                               ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of reducing the estimated distance to the destination, while the direct distance ensures practical feasibility. The code processes each unvisited node, computes the weighted sum, and selects the node with the smallest value.}
                                                                                                                                                                                                                                               ^
SyntaxError: unmatched '}'
